# w3bstream-client-esp32

./: CMakeLists.txt  README.md  wsiotsdk.c
application/devnet/: iotex_dev_access.c
application/devnet/ProtoBuf/: devnet_upload.pb.c  event.pb.c  event.pb.h  header.pb.c  package.pb.c  package.pb.h  packconfirm.pb.c  payload.pb.c  pb_common.c  pb_decode.c  pb_encode.c  protobuf.h  user_data.pb.c
application/devnet/base64/: base64.c
application/devnet/keccak256/: keccak256.c
crypto/: aes_decrypt.c  cbc_mode.c  ecc.c  ecc_dh.c  ecc_dsa.c
crypto/mbedtls/: CMakeLists.txt
doc/: ESP32S3 Devnet Development Notes -- Eclipse Edition.md  How to create a w3bstream studio project.md  How_to_create_a_w3bstream_studio_project.md  WASM Development Notes -- RUST Edition.md  WSIoTSDK_User_Manual.md
examples/esp32s3/IoTeX_Demo/: sdkconfig.old
examples/esp32s3/web3_devnet/: README.md  sdkconfig
include/: wsiotsdk.h
include/application/devnet/: iotex_dev_access.h  iotex_dev_access_config.h
include/config/: iotex_layer_config.h
include/iotex/: check_config.h  ecdsa.h  ecp.h  sha256.h
include/psa_layer/acc/: acc_driver_cipher.h  acc_driver_hash.h  acc_driver_rsa.h
include/psa_layer/crypto/: psa_crypto_aead.h  psa_crypto_cipher.h  psa_crypto_ecp.h  psa_crypto_hash.h  psa_crypto_invasive.h  psa_crypto_its.h  psa_crypto_random_impl.h  (+1 more)
psa_layer/: cipher_wrap.c  pk_wrap.h  psa_crypto.c  psa_crypto_cipher.c  psa_crypto_client.c  psa_crypto_driver_wrappers.c  psa_crypto_ecp.c  psa_crypto_hash.c  psa_crypto_porting.c  psa_crypto_rsa.c  psa_crypto_slot_management.c  psa_its_file.c  psa_its_flash.c  psa_its_nvs.c
psa_layer/acc/: acc_driver_cipher.c  acc_driver_hash.c  acc_driver_rsa.c
psa_layer/conf/: iotex_layer_config.h
psa_layer/crypto/: psa_crypto_core.h  psa_crypto_driver_wrappers.h  psa_crypto_mac.h  psa_crypto_se.h  psa_crypto_slot_management.h  psa_crypto_storage.h
psa_layer/iotex/: ecp.h  psa_util.h
sdkconfig/: Kconfig  kconfig.py  menuconfig.py
sdkconfig/win/: .config  .config.old  log.txt
tools/wasm/verify/: Cargo.toml
tools/wasm/verify/src/: lib.rs
tools/wasm/verify/src/protos/: mod.rs  upload.proto  upload.rs
(+18 files in other folders)
