idf_component_register(SRCS "wsiotsdk.c"
							"crypto/aes_decrypt.c"
							"crypto/aes_encrypt.c"
							"crypto/cbc_mode.c"
							"crypto/ccm_mode.c"
							"crypto/cmac_mode.c"
							"crypto/ctr_mode.c"
							"crypto/ctr_prng.c"
							"crypto/ecc_dh.c"
							"crypto/ecc_dsa.c"
							"crypto/ecc_platform_specific.c"
							"crypto/ecc.c"
							"crypto/hmac_prng.c"
							"crypto/hmac.c"
							"crypto/sha256.c"
							"crypto/utils.c"
							"psa_layer/cipher_wrap.c"
							"psa_layer/psa_crypto_cipher.c"
							"psa_layer/psa_crypto_client.c"
							"psa_layer/psa_crypto_driver_wrappers.c"
							"psa_layer/psa_crypto_ecp.c"
							"psa_layer/psa_crypto_hash.c"
							"psa_layer/psa_crypto_rsa.c"
							"psa_layer/psa_crypto_porting.c"
							"psa_layer/psa_crypto_slot_management.c"
							"psa_layer/psa_crypto.c"
							"psa_layer/acc/acc_driver_hash.c"
							"psa_layer/acc/acc_driver_cipher.c"
							"psa_layer/acc/acc_driver_rsa.c"
							"application/devnet/iotex_dev_access.c"
							"application/devnet/cJSON/cJSON.c"
							"application/devnet/keccak256/keccak256.c"
							"application/devnet/ProtoBuf/package.pb.c"
							"application/devnet/ProtoBuf/event.pb.c"
							"application/devnet/ProtoBuf/pb_common.c"
							"application/devnet/ProtoBuf/pb_decode.c"
							"application/devnet/ProtoBuf/pb_encode.c"
							"application/devnet/base64/base64.c"
                    INCLUDE_DIRS "include" "include/application/devnet"
                    REQUIRES mbedtls)
                    
target_compile_options(${COMPONENT_LIB} PRIVATE "-Wno-format")                    

